# textanalyzer

./: CMakeLists.txt
data/: test1.txt
include/: Config.h  FileReader.h  Reader.h  TerminalController.h  TerminalView.h  TextModel.h
src/: FileReader.cpp  Reader.cpp  TerminalController.cpp  TerminalView.cpp  TextModel.cpp  main.cpp
